# realsense-depth-human-detection-ros2

./: .gitignore  LICENSE  README.md
ros2_ws/src/intel_depth_detection/: CMakeLists.txt  package.xml  ros2_ws_src_note.txt  setup.py
ros2_ws/src/intel_depth_detection/intel_depth_detection/: __init__.py  realsense_node.py  yolo_detector.py
ros2_ws/src/intel_depth_detection/launch/: realsense_yolo.launch.py
ros2_ws/src/intel_depth_detection/msg/: HumanDetection.msg
ros2_ws/src/intel_depth_detection/resource/: intel_depth_detection
ros2_ws/src/intel_depth_detection/rviz/: realsense_yolo.rviz
