<?xml version="1.0"?>
<package format="3">
  <name>intel_depth_detection</name>
  <version>0.1.0</version>

  <description>
    Intel RealSense D456 human detection with YOLOv11, depth estimation, and RViz visualization
  </description>

  <maintainer email="blacksaturn.ai@gmail.com">Jason Patel II</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>ultralytics</exec_depend>
  <exec_depend>pyrealsense2</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export/>
</package>
